<resources>
    <string name="declaration_allow">Agree</string>
    <string name="declaration_content_td_custom">This feature needs to connect to the internet to work normally.</string>
    <string name="declaration_content">1. By using this service, you agree to Sohu Video, iQiyi, and other content providers\' <a href="http://www.youku.com/pub/youku/service/agreement.shtml#agr1">Terms of Service</a>.\n2. Help improve this product, by automatically sending diagnostic and usage data to Mi.\n3. Our HD Video plug-in will be installed automatically.\n4. This feature needs to connect to the internet to work normally.</string>
    <string name="declaration">Terms of Service</string>
    <string name="no_longer_tips">"Don't show again"</string>
    <string name="userdata_alert_title">Data usage warning</string>
    <string name="userdata_alert_content">"Using your mobile data connection to watch videos will increase your data usage. If you go over your plan’s data usage limit, your carrier could charge you fees."</string>
    <string name="userdata_alert_ok">Play</string>
    <string name="check_network">"Can't connect to the network"</string>
    <string name="search">Search</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="count_ge_result">%d results</string>
    <string name="search_result_input_hint">Search</string>
    <string name="search_result_empty_text">Didn\'t find anything</string>
    <string name="search_recommend_media_hint">Recommended for you</string>
    <string name="search_recommend_word_hint">Trending</string>
    <string name="filter_program">Filter</string>
    <string name="hot">Popular</string>
    <string name="category">Categories</string>
    <string name="choice">"Top Picks"</string>
    <string name="my">Local</string>
    <string name="search_hint">Search</string>
    <string name="video">Video</string>
    <string name="about">About</string>
    <string name="video_xiaomi">Mi Video</string>
    <string name="video_version">Version %s</string>
    <string name="video_declare">Copyright&#160;&#160;&#160;|&#160;&#160;&#160;Disclaimer</string>
    <string name="more">Go to %s</string>
    <string name="local_video">Local</string>
    <string name="my_favorite">Starred</string>
    <string name="my_offline">Offline</string>
    <string name="play_history">Recent</string>
    <string name="addon">Popular</string>
    <string name="share_device">Shared device</string>
    <string name="personal_center">Personal Center</string>
    <string name="not_login">Not signed in</string>
    <string name="click_to_login">Tap to sign in</string>
    <string name="gong_count_ge">%d total</string>
    <string name="online_video">Online</string>
    <string name="error_empty_title">Something went wrong</string>
    <string name="error_empty_filter_title">No results</string>
    <string name="local_media_empty_title">No videos</string>
    <string name="local_media_empty_sub_title">Download and watch videos offline</string>
    <string name="play_his_empty_title">Empty</string>
    <string name="local_favorite_empty_title">Empty</string>
    <string name="offline_media_empty_title">Empty</string>
    <string name="device_empty_hint">Empty</string>
    <string name="device_media_empty_hint">Empty</string>
    <string name="delete">Delete</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="addon_all">All</string>
    <string name="installed">Installed</string>
    <string name="addon_installed_empty_hint">Empty</string>
    <string name="edit">Edit</string>
    <string name="unfavorite">Unstar</string>
    <string name="delete_action_text">Delete (%d)</string>
    <string name="gong_count_ji">%d Ep. total</string>
    <string name="similar">Similar</string>
    <string name="all_ep">All ep</string>
    <string name="play">Play</string>
    <string name="connecting">Connecting</string>
    <string name="introduce">Summary</string>
    <string name="comment">Comments</string>
    <string name="douban_score">Reviews</string>
    <string name="write_comment">Add comment</string>
    <string name="see_all_count_comment">%d more comments</string>
    <string name="detail_comment_empty">Empty</string>
    <string name="offline">Offline</string>
    <string name="favorite">Starred</string>
    <string name="add_favorite_success">Starred</string>
    <string name="cancel_favorite_success">Unstarred</string>
    <string name="all">All</string>
    <string name="channel_recommend">Featured</string>
    <string name="channel_hot">Popular</string>
    <string name="channel_new">New</string>
    <string name="channel_choice">"Editor's choice"</string>
    <string name="channel_score">Reviews</string>
    <string name="channel_latest">New</string>
    <string name="channel_variety_choice">Featured</string>
    <string name="channel_variety_hot">Popular</string>
    <string name="channel_ok">OK</string>
    <string name="filter">Filter</string>
    <string name="gong_count_bu">%d views total</string>
    <string name="play_count_ci">%d views</string>
    <string name="tv_channel_empty_hint">No channels.</string>
    <string name="defaults">Default</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="percent_status" translatable="false">%.0f%%</string>
    <string name="tv_series">TV shows</string>
    <string name="film">Movies</string>
    <string name="variety">Featured</string>
    <string name="recent_play">Recently watched</string>
    <string name="offline_media">Offline</string>
    <string name="tv">Live</string>
    <string name="edit_comment">Add comment</string>
    <string name="average_score">Average rating</string>
    <string name="count_comment">%d reviews</string>
    <string name="count_comment_wan">%.2f0 reviews</string>
    <string name="avg_score">%.1f</string>
    <string name="positive_comment">Like</string>
    <string name="negative_comment">Dislike</string>
    <string name="xiaomi_user">User</string>
    <string name="star5">5&#160;stars</string>
    <string name="star4">4&#160;stars</string>
    <string name="star3">3&#160;stars</string>
    <string name="star2">2&#160;stars</string>
    <string name="star1">1&#160;star</string>
    <string name="send">Submit</string>
    <string name="media_name_comment">%s comments</string>
    <string name="comment_edit_et_hint">300 character limit</string>
    <string name="comment_edit_start_hint">Touch stars to rate</string>
    <string name="comment_count_less_tip">Comment must be at least %d characters</string>
    <string name="comment_count_much_tip">Comment can\'t exceed %d characters</string>
    <string name="click_star_rate">Touch to rate</string>
    <string name="offline_no_source">"Can\'t view in offline mode"</string>
    <string name="download_is_in_tasklist">In download queue</string>
    <string name="download_add_success">Added to download queue</string>
    <string name="offline_alert_title">Data usage</string>
    <string name="good">OK</string>
    <string name="offline_no_selected_item_hint">Choose a video</string>
    <string name="offline_alert_wifi">You are using cellular network, to save your data usage, the caching tasks are paused and will be continue after you switch to wifi network.</string>
    <string name="datastream_alert_play">Using your mobile data connection to watch videos will increase your data usage. If you go over your plan’s data usage limit, your carrier could charge you additional fees.</string>
    <string name="datastream_alert_download">Using your mobile data connection to download videos will increase your data usage. If you go over your plan’s data usage limit, your carrier could charge you additional fees.</string>
    <string name="datastream_alert_hint">You can turn off data usage notifications any time in Settings.</string>
    <string name="datastream_alert_positive_button">Continue</string>
    <string name="datastream_alert_negative_button">Cancel</string>
    <string name="datastream_alert_title">Data usage warning</string>
    <string name="all_media">All ep</string>
    <string name="ji">ep</string>
    <string name="series_ep">Ep. %d</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Deselect all</string>
    <string name="select_count_xiang">%d selected</string>
    <string name="system_setting">System settings</string>
    <string name="setting">Settings</string>
    <string name="offline_setting">Offline media</string>
    <string name="use_cellular_play_title">Streaming notification</string>
    <string name="use_cellular_play_summary">Show notification when using mobile data to watch video</string>
    <string name="use_cellular_network">Use mobile data connection</string>
    <string name="use_cellular_network_summary">Use mobile data connection to download videos. This will increase your mobile data usage.</string>
    <string name="use_cellular_offlinedownload_title">Download notification</string>
    <string name="use_cellular_offlinedownload_summary">Show notification when using mobile data to download video</string>
    <string name="mipush_setting">Mi push</string>
    <string name="receive_mipush">Mi push notifications</string>
    <string name="receive_mipush_summary">Receive notifications when new content is available</string>
    <string name="other_setting">Other</string>
    <string name="clear_cache">Clear image cache</string>
    <string name="clear_cache_summary">Clear cached images from Video browser</string>
    <string name="clear_cache_success">Cache cleared</string>
    <string name="priority_storage">Save to SD card</string>
    <string name="priority_storage_summary">Automatically save to external SD card if available</string>
    <string name="loading"> <CDATA>Loading </CDATA> </string>
    <string name="reload_title_ep">"Couldn't get full series"</string>
    <string name="reload_title">Can\'t connect to the network</string>
    <string name="reload_sub_title">Tap to retry</string>
    <string name="retry">Retry</string>
    <string name="updatedalready">Updated</string>
    <string name="select_tv">Select channel</string>
    <string name="forecast">Forecast</string>
    <string name="select_tv_empty_hint">No channels</string>
    <string name="forecast_empty_hint">No programes</string>
    <string name="select_tvs">Select channels</string>
    <string name="forecasts">Previews</string>
    <string name="key_back_down_toast">To exit, touch Back again</string>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_title">Update available</string>
    <string name="update_version_prefix"><CDATA>"Update available: "</CDATA></string>
    <string name="update_size_prefix"><CDATA>"Size: "</CDATA></string>
    <string name="update_apk_statusbar">Downloading\u2026</string>
    <string name="area_unknown">Unknown</string>
    <string name="score">Rating&#160;</string>
    <string name="place_at">No. %d</string>
    <string name="download_with">Downloading %1$s/%2$s</string>
    <string name="offline_loading">Offline</string>
    <string name="offline_loaded">Offline video</string>
    <string name="download_task_with">%d tasks</string>
    <string name="offline_status_loading">Downloading</string>
    <string name="offline_status_waiting">Waiting</string>
    <string name="offline_status_paused">Paused</string>
    <string name="offline_status_failed">Failed</string>
    <string name="offline_status_finished">Complete</string>
    <string name="storage_remain">"Available: "</string>
    <string name="storage_total">"Total space: "</string>
    <string name="offline_with">Offline (%d)</string>
    <string name="delete_with">Delete (%d)</string>
    <string name="info_channel_title">News</string>
    <string name="video_count">%d videos</string>
</resources>