<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="@dimen/detail_bottom_bar_height"
    android:background="@drawable/com_bg_white">
    <View
		android:layout_width="match_parent"
		android:layout_height="@dimen/video_common_divider_height"
		android:background="@drawable/com_10_black"/>
    <TextView
        android:id="@+id/detail_favorite"
        android:layout_width="@dimen/detail_favorite_width"
        android:layout_height="@dimen/detail_favorite_height"
        android:layout_marginLeft="@dimen/detail_favorite_left_margin"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:text="@string/favorite"
        android:drawableLeft="@drawable/btn_detail_favorite"
  		android:drawablePadding="@dimen/detail_bottom_bar_drawable_padding"
  		android:paddingLeft="@dimen/detail_bottom_bar_content_intervalH"  		        
        android:background="@drawable/com_btn_bg_n"
        android:textSize="@dimen/font_size_36"
        android:textColor="@color/p_80_black"
        android:textIsSelectable="false"/>
    <TextView
        android:id="@+id/detail_download"
        android:layout_width="@dimen/detail_download_width"
        android:layout_height="@dimen/detail_download_height"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/detail_download_right_margin"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:text="@string/offline"
        android:drawableLeft="@drawable/btn_detail_download"
  		android:drawablePadding="@dimen/detail_bottom_bar_drawable_padding"
  		android:paddingLeft="@dimen/detail_bottom_bar_content_intervalH"
        android:background="@drawable/com_btn_bg_n"
        android:textSize="@dimen/font_size_36"
        android:textColor="@color/p_80_black"        
        android:textIsSelectable="false"/>
    <TextView
        android:id="@+id/detail_play"
        android:layout_width="@dimen/detail_play_width"
        android:layout_height="@dimen/detail_play_height"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/play"
        android:background="@drawable/com_btn_bg_3"
        android:textSize="@dimen/font_size_36"
        android:textColor="@color/white"        
        android:textIsSelectable="false"/>
</RelativeLayout>